--- a/redhat/kernel.changelog-8.1
+++ b/redhat/kernel.changelog-8.1
@@ -1,3 +1,344 @@
+* Thu Jun 06 2019 Herton R. Krzesinski <herton@redhat.com> [4.18.0-101.el8]
+- [s390] s390: enable processes for mio instructions (Philipp Rudo) [1651734]
+- [s390] s390/pci: add parameter to disable usage of MIO instructions (Philipp Rudo) [1651734]
+- [s390] s390/pci: provide support for MIO instructions (Philipp Rudo) [1651734]
+- [s390] s390/pci: improve bar check (Philipp Rudo) [1651734]
+- [s390] s390/ism: move oddities of device IO to wrapper function (Philipp Rudo) [1651734]
+- [s390] s390/pci: move io address mapping code to pci_insn.c (Philipp Rudo) [1651734]
+- [s390] s390/pci: add parameter to force floating irqs (Philipp Rudo) [1651735]
+- [s390] s390/pci: gather statistics for floating vs directed irqs (Philipp Rudo) [1651735]
+- [s390] s390: show statistics for MSI IRQs (Philipp Rudo) [1651735]
+- [s390] s390/pci: provide support for CPU directed interrupts (Philipp Rudo) [1651735]
+- [s390] s390/airq: provide cacheline aligned ivs (Philipp Rudo) [1651735]
+- [s390] s390/pci: clarify interrupt vector usage (Philipp Rudo) [1651735]
+- [s390] s390/airq: recognize directed interrupts (Philipp Rudo) [1651735]
+- [s390] s390/sclp: detect DIRQ facility (Philipp Rudo) [1651735]
+- [s390] s390/pci: move everything irq related to pci_irq.c (Philipp Rudo) [1651735]
+- [s390] s390/pci: remove stale rc (Philipp Rudo) [1651735]
+- [s390] s390/pci: remove unused define (Philipp Rudo) [1651735]
+- [s390] s390/pci: mark command line parser data __initdata (Philipp Rudo) [1651735]
+- [cpufreq] cpufreq: intel_pstate: Ignore turbo active ratio in HWP (David Arcari) [1711970]
+- [scsi] mpt3sas: remove tech preview from Aero series (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: fix indentation issue (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Update mpt3sas driver version to 28.100.00.00 (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Improve the threshold value and introduce module param (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Load balance to improve performance and avoid soft lockups (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Irq poll to avoid CPU hard lockups (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: simplify interrupt handler (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Fix typo in request_desript_type (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Add missing breaks in switch statements (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Update driver version to 27.102.00.00 (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Add support for ATLAS PCIe switch (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Add support for NVMe Switch Adapter (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Rename mpi endpoint device ID macro. (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: mpt3sas_scsih: Mark expected switch fall-through (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: fix memory ordering on 64bit writes (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: fix spelling mistake "manufaucturing" -> "manufacturing" (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Fix driver modifying persistent data in Manufacturing page11 (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Don't modify EEDPTagMode field setting on SAS3.5 HBA devices (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Fix Sync cache command failure during driver unload (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Call sas_remove_host before removing the target devices (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Refactor mpt3sas_wait_for_ioc function (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Separate out mpt3sas_wait_for_ioc (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: Added new #define variable IOC_OPERATIONAL_WAIT_COUNT (Tomas Henzl) [1684444]
+- [scsi] scsi: mpt3sas: switch to generic DMA API (Tomas Henzl) [1684444]
+- [tools] perf tools beauty ioctl: Support new ISO7816 commands (Michael Petlan) [1709243]
+- [tools] perf tools: Restore proper cwd on return from mnt namespace (Michael Petlan) [1709243]
+- [tools] perf tools: Fix crash on synthesizing the unit (Michael Petlan) [1709243]
+- [tools] perf tools: Do not zero sample_id_all for group members (Michael Petlan) [1709243]
+- [tools] perf beauty: Use SRCARCH, ARCH=x86_64 must map to "x86" to find the headers (Michael Petlan) [1709243]
+- [tools] perf intel-pt: Add MTC and CYC timestamps to debug log (Michael Petlan) [1709243]
+- [tools] perf intel-pt: Add more event information to debug log (Michael Petlan) [1709243]
+- [tools] perf scripts python: exported-sql-viewer.py: Fix table find when table re-ordered (Michael Petlan) [1709243]
+- [tools] perf scripts python: exported-sql-viewer.py: Add help window (Michael Petlan) [1709243]
+- [tools] perf scripts python: exported-sql-viewer.py: Add Selected branches report (Michael Petlan) [1709243]
+- [tools] perf scripts python: exported-sql-viewer.py: Fall back to /usr/local/lib/libxed.so (Michael Petlan) [1709243]
+- [tools] perf top: Display the LBR stats in callchain entry (Michael Petlan) [1709243]
+- [tools] perf stat: Handle different PMU names with common prefix (Michael Petlan) [1709243]
+- [tools] perf record: Support weak groups (Michael Petlan) [1709243]
+- [tools] perf evlist: Move perf_evsel__reset_weak_group into evlist (Michael Petlan) [1709243]
+- [tools] perf augmented_syscalls: Start collecting pathnames in the BPF program (Michael Petlan) [1709243]
+- [tools] perf trace: Fix setting of augmented payload when using eBPF + raw_syscalls (Michael Petlan) [1709243]
+- [tools] perf trace: When augmenting raw_syscalls plug raw_syscalls:sys_exit too (Michael Petlan) [1709243]
+- [tools] perf examples bpf: Start augmenting raw_syscalls:sys_{start,exit} (Michael Petlan) [1709243]
+- [tools] perf intel-pt/bts: Calculate cpumode for synthesized samples (Michael Petlan) [1709243]
+- [tools] perf intel-pt: Insert callchain context into synthesized callchains (Michael Petlan) [1709243]
+- [tools] perf top: Start display thread earlier (Michael Petlan) [1709243]
+- [tools] perf trace beauty: Use the mmap flags table generated from headers (Michael Petlan) [1709243]
+- [tools] perf beauty: Wire up the mmap flags table generator to the Makefile (Michael Petlan) [1709243]
+- [tools] perf beauty: Add a generator for MAP_ mmap's flag constants (Michael Petlan) [1709243]
+- [tools] perf callchain: Honour the ordering of PERF_CONTEXT_{USER,KERNEL,etc} (Michael Petlan) [1709243]
+- [tools] perf cs-etm: Correct CPU mode for samples (Michael Petlan) [1709243]
+- [tools] perf unwind: Take pgoff into account when reporting elf to libdwfl (Michael Petlan) [1709243]
+- [tools] perf top: Do not use overwrite mode by default (Michael Petlan) [1709243]
+- [tools] perf trace: Beautify mount's first pathname arg (Michael Petlan) [1709243]
+- [tools] perf trace: Beautify the umount's 'name' argument (Michael Petlan) [1709243]
+- [tools] perf trace: Consider syscall aliases too (Michael Petlan) [1709243]
+- [tools] perf trace beauty: Beautify mount/umount's 'flags' argument (Michael Petlan) [1709243]
+- [tools] perf trace beauty: Allow syscalls to mask an argument before considering it (Michael Petlan) [1709243]
+- [tools] perf beauty: Introduce strarray__scnprintf_flags() (Michael Petlan) [1709243]
+- [tools] perf beauty: Switch from GPL v2.0 to LGPL v2.1 (Michael Petlan) [1709243]
+- [tools] perf beauty: Add a generator for MS_ mount/umount's flag constants (Michael Petlan) [1709243]
+- [tools] tools include uapi: Grab a copy of linux/fs.h (Michael Petlan) [1709243]
+- [tools] perf script: Support total cycles count (Michael Petlan) [1709243]
+- [tools] perf script: Make itrace script default to all calls (Michael Petlan) [1709243]
+- [tools] perf scripts python: exported-sql-viewer.py: Add All branches report (Michael Petlan) [1709243]
+- [tools] perf scripts python: exported-sql-viewer.py: Add ability to display all the database tables (Michael Petlan) [1709243]
+- [tools] perf scripts python: exported-sql-viewer.py: Add ability to shrink / enlarge font (Michael Petlan) [1709243]
+- [tools] perf scripts python: exported-sql-viewer.py: Add ability to find symbols in the call-graph (Michael Petlan) [1709243]
+- [tools] perf scripts python: exported-sql-viewer.py: Add support for multiple sub-windows (Michael Petlan) [1709243]
+- [tools] perf scripts python: call-graph-from-sql.py: Rename to exported-sql-viewer.py (Michael Petlan) [1709243]
+- [tools] perf scripts python: call-graph-from-sql.py: Refactor TreeItem class (Michael Petlan) [1709243]
+- [tools] perf scripts python: call-graph-from-sql.py: Add data helper functions (Michael Petlan) [1709243]
+- [tools] perf scripts python: call-graph-from-sql.py: Factor out CallGraphModel from TreeModel (Michael Petlan) [1709243]
+- [tools] perf scripts python: call-graph-from-sql.py: Remove use of setObjectName() (Michael Petlan) [1709243]
+- [tools] perf scripts python: call-graph-from-sql.py: Add a class for global data (Michael Petlan) [1709243]
+- [tools] perf scripts python: call-graph-from-sql.py: Separate the database details into a class (Michael Petlan) [1709243]
+- [tools] perf scripts python: call-graph-from-sql.py: Make a "Main" function (Michael Petlan) [1709243]
+- [tools] perf scripts python: call-graph-from-sql.py: Change icon (Michael Petlan) [1709243]
+- [tools] perf scripts python: call-graph-from-sql.py: Set a minimum window size (Michael Petlan) [1709243]
+- [tools] perf scripts python: call-graph-from-sql.py: Provide better default column sizes (Michael Petlan) [1709243]
+- [tools] perf scripts python: call-graph-from-sql.py: Use SPDX license identifier (Michael Petlan) [1709243]
+- [tools] perf trace: Introduce per-event maximum number of events property (Michael Petlan) [1709243]
+- [tools] perf script: Flush output stream after events in verbose mode (Michael Petlan) [1709243]
+- [tools] perf script: Allow extended console debug output (Michael Petlan) [1709243]
+- [tools] perf stat: Poll for monitored tasks being alive (Michael Petlan) [1709243]
+- [tools] perf trace: Drop thread refcount in trace__event_handler() (Michael Petlan) [1709243]
+- [tools] perf trace: Drop addr_location refcounts (Michael Petlan) [1709243]
+- [tools] perf evsel: Mark a evsel as disabled when asking the kernel do disable it (Michael Petlan) [1709243]
+- [tools] perf evsel: Introduce per event max_events property (Michael Petlan) [1709243]
+- [tools] tools lib subcmd: Introduce OPTION_ULONG (Michael Petlan) [1709243]
+- [tools] perf arm64: Fix generate system call table failed with /tmp mounted with noexec (Michael Petlan) [1709243]
+- [tools] perf symbols: Set PLT entry/header sizes properly on Sparc (Michael Petlan) [1709243]
+- [tools] perf jitdump: Add Sparc support. (Michael Petlan) [1709243]
+- [tools] perf annotate: Add Sparc support (Michael Petlan) [1709243]
+- [tools] perf record: Encode -k clockid frequency into Perf trace (Michael Petlan) [1709243]
+- [tools] perf probe: Support SDT markers having reference counter (semaphore) (Michael Petlan) [1709243]
+- [tools] tools lib traceevent, perf tools: Move struct tep_handler definition in a local header file (Michael Petlan) [1709243]
+- [tools] tools lib traceevent: Separate out tep_strerror() for strerror_r() issues (Michael Petlan) [1709243]
+- [tools] perf python: More portable way to make CFLAGS work with clang (Michael Petlan) [1709243]
+- [tools] perf python: Make clang_has_option() work on Python 3 (Michael Petlan) [1709243]
+- [tools] perf tools: Free temporary 'sys' string in read_event_files() (Michael Petlan) [1709243]
+- [tools] perf tools: Avoid double free in read_event_file() (Michael Petlan) [1709243]
+- [tools] perf tools: Free 'printk' string in parse_ftrace_printk() (Michael Petlan) [1709243]
+- [tools] perf tools: Cleanup trace-event-info 'tdata' leak (Michael Petlan) [1709243]
+- [tools] perf strbuf: Match va_{add,copy} with va_end (Michael Petlan) [1709243]
+- [tools] perf test: S390 does not support watchpoints in test 22 (Michael Petlan) [1709243]
+- [tools] perf auxtrace: Include missing asm/bitsperlong.h to get BITS_PER_LONG (Michael Petlan) [1709243]
+- [tools] tools include: Adopt linux/bits.h (Michael Petlan) [1709243]
+- [tools] perf intel-pt: Implement decoder flags for trace begin / end (Michael Petlan) [1709243]
+- [tools] perf intel-pt: Add decoder flags for trace begin / end (Michael Petlan) [1709243]
+- [tools] perf tools: Improve thread_stack__process() for trace begin / end (Michael Petlan) [1709243]
+- [tools] perf tools: Improve thread_stack__event() for trace begin / end (Michael Petlan) [1709243]
+- [tools] perf db-export: Add trace begin / end branch type variants (Michael Petlan) [1709243]
+- [tools] perf script: Enhance sample flags for trace begin / end (Michael Petlan) [1709243]
+- [tools] tools lib traceevent: Add prefix tep_ to enum filter_trivial_type (Michael Petlan) [1709243]
+- [tools] tools lib traceevent: Rename data2host*() APIs (Michael Petlan) [1709243]
+- [tools] tools lib traceevent: Rename struct plugin_list to struct tep_plugin_list (Michael Petlan) [1709243]
+- [tools] tools lib traceevent: Add prefix tep_ to structs filter_type and event_filter (Michael Petlan) [1709243]
+- [tools] tools lib traceevent: Add prefix tep_ to various structs filter_arg_*. (Michael Petlan) [1709243]
+- [tools] tools lib traceevent: Add prefix tep_ to struct filter_{arg,value_type} (Michael Petlan) [1709243]
+- [tools] tools lib traceevent: Add prefix tep_ to enums filter_{exp,arg}_type (Michael Petlan) [1709243]
+- [tools] tools lib traceevent: Add prefix tep_ to enums filter_{boolean,op,cmp}_type (Michael Petlan) [1709243]
+- [tools] tools lib traceevent, perf tools: Rename enum print_arg_type to enum tep_print_arg_type (Michael Petlan) [1709243]
+- [tools] tools lib traceevent, perf tools: Add prefix tep_ to all print_* structures (Michael Petlan) [1709243]
+- [tools] tools lib traceevent: Add prefix TEP_ to all EVENT_FL_* flags (Michael Petlan) [1709243]
+- [tools] tools lib traceevent: Rename enum event_{sort_}type to enum tep_event_{sort_}type (Michael Petlan) [1709243]
+- [tools] tools lib traceevent, perf tools: Rename enum format_flags to enum tep_format_flags (Michael Petlan) [1709243]
+- [tools] tools lib traceevent, perf tools: Rename struct format{_field} to struct tep_format{_field} (Michael Petlan) [1709243]
+- [tools] tools lib traceevent, perf tools: Rename struct event_format to struct tep_event_format (Michael Petlan) [1709243]
+- [tools] perf script: Print DSO for callindent (Michael Petlan) [1709243]
+- [tools] perf script: Allow sym and dso without ip, addr (Michael Petlan) [1709243]
+- [tools] tools lib subcmd: Support overwriting the pager (Michael Petlan) [1709243]
+- [tools] perf tools: Report itrace options in help (Michael Petlan) [1709243]
+- [tools] perf help: Add missing subcommand `version` (Michael Petlan) [1709243]
+- [tools] perf tools: Initialize perf_data_file fd field (Michael Petlan) [1709243]
+- [tools] perf util: Make copyfile_offset() global (Michael Petlan) [1709243]
+- [tools] perf tools: Add 'struct perf_mmap' arg to record__write() (Michael Petlan) [1709243]
+- [tools] perf auxtrace: Pass struct perf_mmap into mmap__read* functions (Michael Petlan) [1709243]
+- [tools] perf tools: Remove perf_tool from event_op3 (Michael Petlan) [1709243]
+- [tools] perf tools: Remove perf_tool from event_op2 (Michael Petlan) [1709243]
+- [tools] perf bpf-loader: use PTR_ERR_OR_ZERO inetead of return code (Michael Petlan) [1709243]
+- [tools] tools include: Adopt PTR_ERR_OR_ZERO from the kernel err.h header (Michael Petlan) [1709243]
+- [tools] perf ordered_events: Prevent crossing max_alloc_size (Michael Petlan) [1709243]
+- [tools] perf ordered_events: Add 'struct ordered_events_buffer' layer (Michael Petlan) [1709243]
+- [tools] perf test: Add watchpoint test (Michael Petlan) [1709243]
+- [tools] perf tests: Fix record+probe_libc_inet_pton.sh without ping's debuginfo (Michael Petlan) [1709243]
+- [tools] perf map: Turn some pr_warning() to pr_debug() (Michael Petlan) [1709243]
+- [tools] perf trace: Use the raw_syscalls:sys_enter for the augmented syscalls (Michael Petlan) [1709243]
+- [tools] perf trace: Setup augmented_args in the raw_syscalls:sys_enter handler (Michael Petlan) [1709243]
+- [tools] perf trace: Introduce syscall__augmented_args() method (Michael Petlan) [1709243]
+- [tools] perf augmented_syscalls: Avoid optimization to pass older BPF validators (Michael Petlan) [1709243]
+- [tools] perf augmented_syscalls: Check probe_read_str() return separately (Michael Petlan) [1709243]
+- [tools] perf annotate: Handle arm64 move instructions (Michael Petlan) [1709243]
+- [tools] perf trace beauty: Alias 'umount' to 'umount2' (Michael Petlan) [1709243]
+- [tools] perf stat: Move the display functions to stat-display.c (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'metric_events' to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'walltime_*' data to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Propagate 'struct target' arg to sort_aggr_thread() (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'no_merge' data to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'big_num' data to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Do not use the global 'evsel_list' in print functions (Michael Petlan) [1709243]
+- [tools] perf stat: Move *_aggr_* data to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Move ru_* data to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'print_mixed_hw_group_error' to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'print_free_counters_hint' to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'null_run' to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Add 'walltime_nsecs_stats' pointer to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Pass 'evlist' to aggr_update_shadow() (Michael Petlan) [1709243]
+- [tools] perf stat: Pass 'struct perf_stat_config' to first_shadow_cpu() (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'metric_only_len' to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'run_count' to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Use 'evsel->evlist' instead of 'evsel_list' in collect_all_aliases() (Michael Petlan) [1709243]
+- [tools] perf stat: Pass 'evlist' argument to print functions (Michael Petlan) [1709243]
+- [tools] perf stat: Add 'target' argument to perf_evlist__print_counters() (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'unit_width' to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'metric_only' to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'interval_clear' to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Move csv_* to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Pass a 'struct perf_stat_config' argument to global print functions (Michael Petlan) [1709243]
+- [tools] perf stat: Pass 'struct perf_stat_config' argument to local print functions (Michael Petlan) [1709243]
+- [tools] perf stat: Add 'struct perf_stat_config' argument to perf_evlist__print_counters() (Michael Petlan) [1709243]
+- [tools] perf stat: Move STAT_RECORD out of perf_evlist__print_counters() (Michael Petlan) [1709243]
+- [tools] perf stat: Introduce perf_evlist__print_counters() (Michael Petlan) [1709243]
+- [tools] perf stat: Move perf_stat_synthesize_config() to stat.c (Michael Petlan) [1709243]
+- [tools] perf stat: Add 'perf_event__handler_t' argument to perf_stat_synthesize_config() (Michael Petlan) [1709243]
+- [tools] perf stat: Add 'struct perf_evlist' argument to perf_stat_synthesize_config() (Michael Petlan) [1709243]
+- [tools] perf stat: Add 'struct perf_tool' argument to perf_stat_synthesize_config() (Michael Petlan) [1709243]
+- [tools] perf stat: Add 'struct perf_stat_config' argument to perf_stat_synthesize_config() (Michael Petlan) [1709243]
+- [tools] perf stat: Rename 'is_pipe' argument to 'attrs' in perf_stat_synthesize_config() (Michael Petlan) [1709243]
+- [tools] perf stat: Move create_perf_stat_counter() to stat.c (Michael Petlan) [1709243]
+- [tools] perf evsel: Introduce perf_evsel__store_ids() (Michael Petlan) [1709243]
+- [tools] perf tools: Switch 'session' argument to 'evlist' in perf_event__synthesize_attrs() (Michael Petlan) [1709243]
+- [tools] perf stat: Add 'identifier' flag to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Use local config arg for scale in create_perf_stat_counter() (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'no_inherit' to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Move 'initial_delay' to 'struct perf_stat_config' (Michael Petlan) [1709243]
+- [tools] perf stat: Use evsel->threads in create_perf_stat_counter() (Michael Petlan) [1709243]
+- [tools] perf trace: Show comm and tid for tracepoint events (Michael Petlan) [1709243]
+- [tools] perf trace augmented_syscalls: Hook into syscalls:sys_exit_SYSCALL too (Michael Petlan) [1709243]
+- [tools] perf trace augmented_syscalls: Rename augmented_*_syscall__enter to just *_syscall (Michael Petlan) [1709243]
+- [tools] perf augmented_syscalls: Update the header comments (Michael Petlan) [1709243]
+- [tools] perf bpf: Add syscall_exit() helper (Michael Petlan) [1709243]
+- [tools] tools lib traceevent, perf tools: Split trace-seq related APIs in a separate header file (Michael Petlan) [1709243]
+- [tools] perf report: Create auxiliary trace data files for s390 (Michael Petlan) [1709243]
+- [tools] perf trace beauty: Reorganize 'struct sockaddr *' beautifier (Michael Petlan) [1709243]
+- [tools] perf trace augmented_syscalls: Augment sendto's 'addr' arg (Michael Petlan) [1709243]
+- [tools] perf trace augmented_syscalls: Augment bind's 'myaddr' sockaddr arg (Michael Petlan) [1709243]
+- [tools] perf trace augmented_syscalls: Add augmented_sockaddr_syscall_enter() (Michael Petlan) [1709243]
+- [tools] perf trace augmented_syscalls: Augment connect's 'sockaddr' arg (Michael Petlan) [1709243]
+- [tools] perf bpf: Add linux/socket.h to the headers accessible to bpf proggies (Michael Petlan) [1709243]
+- [tools] perf bpf: Give precedence to bpf header dir (Michael Petlan) [1709243]
+- [tools] perf trace: Add a etcsnoop.c augmented syscalls eBPF utility (Michael Petlan) [1709243]
+- [tools] perf trace: Augment 'newstat' (aka 'stat') filename ptr (Michael Petlan) [1709243]
+- [tools] perf trace: Introduce augmented_filename_syscall_enter() declarator (Michael Petlan) [1709243]
+- [tools] perf trace: Augment inotify_add_watch pathname syscall arg (Michael Petlan) [1709243]
+- [tools] perf trace: Augment the 'open' syscall 'filename' arg (Michael Petlan) [1709243]
+- [tools] perf trace: Use the augmented filename, expanding syscall enter pointers (Michael Petlan) [1709243]
+- [tools] perf trace: Show comm/tid for augmented_syscalls (Michael Petlan) [1709243]
+- [tools] perf trace: Extract the comm/tid printing for syscall enter (Michael Petlan) [1709243]
+- [tools] perf trace: Print the syscall name for augmented_syscalls (Michael Petlan) [1709243]
+- [tools] perf trace: Make the augmented_syscalls filter out the tracepoint event (Michael Petlan) [1709243]
+- [tools] perf trace: Pass augmented args to the arg formatters when available (Michael Petlan) [1709243]
+- [x86] perf/x86/intel: Disallow precise_ip on BTS events (Michael Petlan) [1709243]
+- [x86] perf/x86/intel: Add generic branch tracing check to intel_pmu_has_bts() (Michael Petlan) [1709243]
+- [x86] perf/x86/intel: Move branch tracing setup to the Intel-specific source file (Michael Petlan) [1709243]
+- [x86] perf/x86/intel: Fix regression by default disabling perfmon v4 interrupt handling (Michael Petlan) [1709243]
+- [x86] perf/x86/intel/uncore: Support CoffeeLake 8th CBOX (Michael Petlan) [1709243]
+- [x86] perf/x86/intel/uncore: Add more IMC PCI IDs for KabyLake and CoffeeLake CPUs (Michael Petlan) [1709243]
+- [tools] perf tools: Don't clone maps from parent when synthesizing forks (Michael Petlan) [1709243]
+- [tools] perf top: Allow disabling the overwrite mode (Michael Petlan) [1709243]
+- [kernel] perf/core: Clean up inconsisent indentation (Michael Petlan) [1709243]
+- [tools] perf script: Implement --graph-function (Michael Petlan) [1709243]
+- [tools] tools script: Add --call-trace and --call-ret-trace (Michael Petlan) [1709243]
+- [tools] perf script: Add --insn-trace for instruction decoding (Michael Petlan) [1709243]
+- [tools] perf trace: Introduce --max-events (Michael Petlan) [1709243]
+- [x86] perf/x86/intel: Add quirk for Goldmont Plus (Michael Petlan) [1709243]
+- [kernel] perf: Suppress AUX/OVERWRITE records (Michael Petlan) [1709243]
+- [x86] perf/x86/intel/pt: Annotate 'pt_cap_group' with __ro_after_init (Michael Petlan) [1709243]
+- [x86] perf/x86: Add __ro_after_init annotations (Michael Petlan) [1709243]
+- [x86] x86/mm/mem_encrypt: Disable all instrumentation for early SME setup (Janakarajan Natarajan) [1679265]
+- [fs] cifs: fix copy_file_range to allow write on the same file (Leif Sahlberg) [1689100]
+- [infiniband] Revert "[infiniband] IB/usnic: Remove stub functions" (Jonathan Toppins) [1713753]
+- [x86] Update stepping values for Whiskey Lake U/Y (David Arcari) [1704801]
+- [powerpc] powerpc/perf: Trace imc PMU functions (Jiri Olsa) [1608796]
+- [powerpc] powerpc/perf: Trace imc events detection and cpuhotplug (Jiri Olsa) [1608796]
+- [powerpc] powerpc/perf: Declare static identifier a such (Jiri Olsa) [1608796]
+- [powerpc] powerpc/perf: Add privileged access check for thread_imc (Jiri Olsa) [1608796]
+- [powerpc] powerpc/perf: Rearrange setting of ldbar for thread-imc (Jiri Olsa) [1608796]
+- [powerpc] powerpc/include: Add data structures and macros for IMC trace mode (Jiri Olsa) [1608796]
+- [scsi] hpsa: correct-static-checker-issue-in-reset-handler (Joseph Szczypek) [1713772]
+- [scsi] scsi: hpsa: update driver version (Joseph Szczypek) [1713772]
+- [scsi] scsi: hpsa: correct device resets (Joseph Szczypek) [1713772]
+- [scsi] scsi: hpsa: do-not-complete-cmds-for-deleted-devices (Joseph Szczypek) [1713772]
+- [scsi] scsi: hpsa: wait longer for ptraid commands (Joseph Szczypek) [1713772]
+- [scsi] scsi: hpsa: check for tag collision (Joseph Szczypek) [1713772]
+- [scsi] scsi: hpsa: use local workqueues instead of system workqueues (Joseph Szczypek) [1713772]
+- [scsi] scsi: hpsa: correct simple mode (Joseph Szczypek) [1713772]
+- [scsi] scsi: hpsa: bump driver version (Joseph Szczypek) [1713772]
+- [scsi] scsi: hpsa: correct device id issues (Joseph Szczypek) [1713772]
+- [scsi] scsi: hpsa: check for lv removal (Joseph Szczypek) [1713772]
+- [mm] mm, slub: restore the original intention of prefetch_freepointer() (Rafael Aquini) [1714671]
+- [fs] Revert "add KABI padding to dentry structure" (Waiman Long) [1714253]
+- [crypto] crypto: drbg - add FIPS 140-2 CTRNG for noise source (Herbert Xu) [1687905]
+- [infiniband] RDMA/qedr: Fix incorrect device rate. (Manish Chopra) [1713580]
+- [scsi] scsi: bnx2fc: remove unneeded variable (Nilesh Javali) [1665308]
+- [scsi] scsi: fcoe: make use of fip_mode enum complete (Nilesh Javali) [1665308]
+- [char] ipmi:ssif: compare block number correctly for multi-part return messages (Tony Camuso) [1712159]
+- [kernel] kernel/sysctl.c: define minmax conv functions in terms of non-minmax versions (Alex Gladkov) [1683922]
+- [kernel] kernel/sysctl.c: add missing range check in do_proc_dointvec_minmax_conv (Alex Gladkov) [1683922]
+- [tools] tools/testing/selftests/sysctl/sysctl.sh: add tests for >32-bit values written to 32-bit integers (Alex Gladkov) [1683922]
+- [kernel] sched/nohz: Run NOHZ idle load balancer on HK_FLAG_MISC CPUs (Desnes Augusto Nunes do Rosario) [1666614]
+- [kernel] nohz_full: Allow the boot CPU to be nohz_full (Desnes Augusto Nunes do Rosario) [1666614]
+- [kernel] sched/isolation: Require a present CPU in housekeeping mask (Desnes Augusto Nunes do Rosario) [1666614]
+- [kernel] kernel/cpu: Allow non-zero CPU to be primary for suspend / kexec freeze (Desnes Augusto Nunes do Rosario) [1666614]
+- [kernel] power/suspend: Add function to disable secondaries for suspend (Desnes Augusto Nunes do Rosario) [1666614]
+- [kernel] sched/core: Allow the remote scheduler tick to be started on CPU0 (Desnes Augusto Nunes do Rosario) [1666614]
+- [kernel] sched/fair: Use non-atomic cpumask_{set,clear}_cpu() (Desnes Augusto Nunes do Rosario) [1666614]
+- [lib] lib: reciprocal_div: implement the improved algorithm on the paper mentioned (Petr Oros) [1706982]
+- [kernel] kernel/sysctl.c: fix proc_do_large_bitmap for large input buffers (Eric Sandeen) [1667092]
+- [kernel] tools/testing/selftests/sysctl/sysctl.sh: add proc_do_large_bitmap() test case (Eric Sandeen) [1667092]
+- [tools] tools/testing/selftests/sysctl/sysctl.sh: allow graceful use on older kernels (Eric Sandeen) [1667092]
+- [tools] tools/testing/selftests/sysctl/sysctl.sh: ignore diff output on verify_diff_w() (Eric Sandeen) [1667092]
+- [tools] tools/testing/selftests/sysctl/sysctl.sh: load module before testing for it (Eric Sandeen) [1667092]
+- [tools] tools/testing/selftests/sysctl/sysctl.sh: remove superfluous test_reqs() (Eric Sandeen) [1667092]
+- [kernel] kernel/sysctl.c: fix out-of-bounds access when setting file-max (Eric Sandeen) [1694160]
+- [kernel] sysctl: handle overflow for file-max (Eric Sandeen) [1694160]
+- [kernel] sysctl: handle overflow in proc_get_long (Eric Sandeen) [1694160]
+- [s390] kvm: s390: Fix potential spectre warnings (Thomas Huth) [1702344]
+- [powerpc] mm: move warning from resize_hpt_for_hotplug() (Laurent Vivier) [1660737]
+- [powerpc] pseries: Use pr_xxx() in lpar.c (Laurent Vivier) [1660737]
+- [infiniband] RDMA/iw_cxgb4: Always disconnect when QP is transitioning to TERMINATE state (Arjun Vynipadath) [1664673]
+- [infiniband] cxgb4: kfree mhp after the debug print (Arjun Vynipadath) [1664673]
+- [infiniband] RDMA/cxbg: Use correct sizing on buffers holding page DMA addresses (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb4: Make function read_tcb() static (Arjun Vynipadath) [1664673]
+- [infiniband] RDMA/cxgb4: Remove kref accounting for sync operation (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb4: cq/qp mask depends on bar2 pages in a host page (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb4: fix srqidx leak during connection abort (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb4: complete the cached SRQ buffers (Arjun Vynipadath) [1664673]
+- [infiniband] rdma/cxgb4: Remove a set-but-not-used variable (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb4: use tos when finding ipv6 routes (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb4: use tos when importing the endpoint (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb4: use listening ep tos when accepting new connections (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb*: kzalloc the iwcm verbs struct (Arjun Vynipadath) [1664673]
+- [infiniband] RDMA/iw_cxgb4: Drop __GFP_NOFAIL (Arjun Vynipadath) [1664673]
+- [infiniband] infiniband: cxgb4: no need to check return value of debugfs_create functions (Arjun Vynipadath) [1664673]
+- [infiniband] RDMA/iw_cxgb4: Fix the unchecked ep dereference (Arjun Vynipadath) [1664673]
+- [infiniband] RDMA: Introduce and use rdma_device_to_ibdev() (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb4: Check for send WR also while posting write with completion WR (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb4: only reconnect with MPAv1 if the peer aborts (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb4: Use proper enumerated type in c4iw_bar2_addrs (Arjun Vynipadath) [1664673]
+- [infiniband] RDMA/cxgb4: remove redundant null pointer check before kfree_skb (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb4: Remove pci_unmap_addr() wrappers for DMA API (Arjun Vynipadath) [1664673]
+- [infiniband] iw_cxgb4: Declare ib_post_send() and ib_post_recv() arguments const (Arjun Vynipadath) [1664673]
+- [infiniband] rdma/cxgb4: Simplify a structure initialization (Arjun Vynipadath) [1664673]
+- [infiniband] rdma/cxgb4: Fix SRQ endianness annotations (Arjun Vynipadath) [1664673]
+- [infiniband] rdma/cxgb4: Add support for kernel mode SRQ's (Arjun Vynipadath) [1664673]
+- [infiniband] rdma/cxgb4: Add support for srq functions & structs (Arjun Vynipadath) [1664673]
+- [infiniband] RDMA/cxgb4: Restore the dropped uninitialized_var (Arjun Vynipadath) [1664673]
+- [infiniband] RDMA/cxgb4: Make c4iw_poll_cq_one() easier to analyze (Arjun Vynipadath) [1664673]
+- [fs] gfs2: clean_journal improperly set sd_log_flush_head (Robert S Peterson) [1693660]
+
 * Fri May 31 2019 Herton R. Krzesinski <herton@redhat.com> [4.18.0-100.el8]
 - [netdrv] bonding/802.3ad: fix slave link initialization transition states (Jarod Wilson) [1714387]
 - [iommu] iommu/vt-d: Disable ATS support on untrusted devices (Jerry Snitselaar) [1649210 1692246]
